--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -720,6 +720,8 @@
     "Cerberus": 1420.800048828125,
     "RevenantEntity": 188.39999389648438,
     "PiglinBrute": 374.0,
-    "EntityGuster": 188.8000030517578
+    "EntityGuster": 188.8000030517578,
+    "FireBeetle": 467.20001220703125,
+    "EntityBoneSerpent": 160.0
   }
 }
