--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -320,7 +320,8 @@
     "EntityBoneSerpent": true,
     "Zoglin": true,
     "EntityGuster": true,
-    "WildenGuardian": true
+    "WildenGuardian": true,
+    "WildenStalker": true
   },
   "entitiesalwaysinfernal": {
     "Vindicator": false,
@@ -549,7 +550,8 @@
     "EntityBoneSerpent": false,
     "Zoglin": false,
     "EntityGuster": false,
-    "WildenGuardian": false
+    "WildenGuardian": false,
+    "WildenStalker": false
   },
   "entitybasehealth": {
     "PropellerEntity": 180.8400268554688,
