--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -724,6 +724,7 @@
     "PiglinBrute": 374.0,
     "EntityGuster": 188.8000030517578,
     "FireBeetle": 467.20001220703125,
-    "EntityBoneSerpent": 160.0
+    "EntityBoneSerpent": 160.0,
+    "Creeperling": 13.199999809265137
   }
 }
