--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -321,7 +321,13 @@
     "Zoglin": true,
     "EntityGuster": true,
     "WildenGuardian": true,
-    "WildenStalker": true
+    "WildenStalker": true,
+    "GiantMiner": true,
+    "ArmoredGiant": true,
+    "Troll": true,
+    "MistWolf": true,
+    "KingSpider": true,
+    "SlimeBeetle": true
   },
   "entitiesalwaysinfernal": {
     "Vindicator": false,
@@ -551,7 +557,13 @@
     "Zoglin": false,
     "EntityGuster": false,
     "WildenGuardian": false,
-    "WildenStalker": false
+    "WildenStalker": false,
+    "GiantMiner": false,
+    "ArmoredGiant": false,
+    "Troll": false,
+    "MistWolf": false,
+    "KingSpider": false,
+    "SlimeBeetle": false
   },
   "entitybasehealth": {
     "PropellerEntity": 180.8400268554688,
@@ -725,6 +737,11 @@
     "EntityGuster": 188.8000030517578,
     "FireBeetle": 467.20001220703125,
     "EntityBoneSerpent": 160.0,
-    "Creeperling": 13.199999809265137
+    "Creeperling": 13.199999809265137,
+    "GiantMiner": 723.2000122070312,
+    "Troll": 256.79998779296875,
+    "SkeletonDruid": 159.1999969482422,
+    "MistWolf": 235.1999969482422,
+    "SwarmSpider": 24.959999084472656
   }
 }
