--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -327,7 +327,10 @@
     "Troll": true,
     "MistWolf": true,
     "KingSpider": true,
-    "SlimeBeetle": true
+    "SlimeBeetle": true,
+    "RedcapSapper": true,
+    "DeathTome": true,
+    "Naga": true
   },
   "entitiesalwaysinfernal": {
     "Vindicator": false,
@@ -563,7 +566,10 @@
     "Troll": false,
     "MistWolf": false,
     "KingSpider": false,
-    "SlimeBeetle": false
+    "SlimeBeetle": false,
+    "RedcapSapper": false,
+    "DeathTome": false,
+    "Naga": false
   },
   "entitybasehealth": {
     "PropellerEntity": 180.8400268554688,
@@ -742,6 +748,7 @@
     "Troll": 256.79998779296875,
     "SkeletonDruid": 159.1999969482422,
     "MistWolf": 235.1999969482422,
-    "SwarmSpider": 24.959999084472656
+    "SwarmSpider": 24.959999084472656,
+    "DeathTome": 260.3999938964844
   }
 }
