--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -330,7 +330,10 @@
     "SlimeBeetle": true,
     "RedcapSapper": true,
     "DeathTome": true,
-    "Naga": true
+    "Naga": true,
+    "MosquitoSwarm": true,
+    "Lich": true,
+    "LichMinion": true
   },
   "entitiesalwaysinfernal": {
     "Vindicator": false,
@@ -569,7 +572,10 @@
     "SlimeBeetle": false,
     "RedcapSapper": false,
     "DeathTome": false,
-    "Naga": false
+    "Naga": false,
+    "MosquitoSwarm": false,
+    "Lich": false,
+    "LichMinion": false
   },
   "entitybasehealth": {
     "PropellerEntity": 180.8400268554688,
