--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -333,7 +333,10 @@
     "Naga": true,
     "MosquitoSwarm": true,
     "Lich": true,
-    "LichMinion": true
+    "LichMinion": true,
+    "Hydra": true,
+    "PinchBeetle": true,
+    "AlphaYeti": true
   },
   "entitiesalwaysinfernal": {
     "Vindicator": false,
@@ -575,7 +578,10 @@
     "Naga": false,
     "MosquitoSwarm": false,
     "Lich": false,
-    "LichMinion": false
+    "LichMinion": false,
+    "Hydra": false,
+    "PinchBeetle": false,
+    "AlphaYeti": false
   },
   "entitybasehealth": {
     "PropellerEntity": 180.8400268554688,
@@ -755,6 +761,9 @@
     "SkeletonDruid": 159.1999969482422,
     "MistWolf": 235.1999969482422,
     "SwarmSpider": 24.959999084472656,
-    "DeathTome": 260.3999938964844
+    "DeathTome": 260.3999938964844,
+    "Minotaur": 317.9999694824219,
+    "WinterWolf": 246.0,
+    "Yeti": 166.39999389648438
   }
 }
