--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -336,7 +336,11 @@
     "LichMinion": true,
     "Hydra": true,
     "PinchBeetle": true,
-    "AlphaYeti": true
+    "AlphaYeti": true,
+    "MazeSlime": true,
+    "Minoshroom": true,
+    "EntityNaga": true,
+    "Wraith": true
   },
   "entitiesalwaysinfernal": {
     "Vindicator": false,
@@ -581,7 +585,11 @@
     "LichMinion": false,
     "Hydra": false,
     "PinchBeetle": false,
-    "AlphaYeti": false
+    "AlphaYeti": false,
+    "MazeSlime": false,
+    "Minoshroom": false,
+    "EntityNaga": false,
+    "Wraith": false
   },
   "entitybasehealth": {
     "PropellerEntity": 180.8400268554688,
@@ -764,6 +772,10 @@
     "DeathTome": 260.3999938964844,
     "Minotaur": 317.9999694824219,
     "WinterWolf": 246.0,
-    "Yeti": 166.39999389648438
+    "Yeti": 166.39999389648438,
+    "MazeSlime": 19.760000228881836,
+    "MosquitoSwarm": 117.12000274658203,
+    "SlimeBeetle": 247.0,
+    "Wraith": 176.0
   }
 }
