--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -340,7 +340,11 @@
     "MazeSlime": true,
     "Minoshroom": true,
     "EntityNaga": true,
-    "Wraith": true
+    "Wraith": true,
+    "LowerGoblinKnight": true,
+    "UpperGoblinKnight": true,
+    "BlockChainGoblin": true,
+    "HelmetCrab": true
   },
   "entitiesalwaysinfernal": {
     "Vindicator": false,
@@ -589,7 +593,11 @@
     "MazeSlime": false,
     "Minoshroom": false,
     "EntityNaga": false,
-    "Wraith": false
+    "Wraith": false,
+    "LowerGoblinKnight": false,
+    "UpperGoblinKnight": false,
+    "BlockChainGoblin": false,
+    "HelmetCrab": false
   },
   "entitybasehealth": {
     "PropellerEntity": 180.8400268554688,
@@ -776,6 +784,11 @@
     "MazeSlime": 19.760000228881836,
     "MosquitoSwarm": 117.12000274658203,
     "SlimeBeetle": 247.0,
-    "Wraith": 176.0
+    "Wraith": 176.0,
+    "HelmetCrab": 87.87999725341797,
+    "LowerGoblinKnight": 135.1999969482422,
+    "UpperGoblinKnight": 202.79998779296875,
+    "BlockChainGoblin": 135.1999969482422,
+    "KingSpider": 195.60000610351562
   }
 }
