--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -344,7 +344,13 @@
     "LowerGoblinKnight": true,
     "UpperGoblinKnight": true,
     "BlockChainGoblin": true,
-    "HelmetCrab": true
+    "HelmetCrab": true,
+    "KnightPhantom": true,
+    "CarminiteGhastguard": true,
+    "CarminiteGolem": true,
+    "TowerBroodling": true,
+    "CarminiteGhastling": true,
+    "UrGhast": true
   },
   "entitiesalwaysinfernal": {
     "Vindicator": false,
@@ -597,7 +603,13 @@
     "LowerGoblinKnight": false,
     "UpperGoblinKnight": false,
     "BlockChainGoblin": false,
-    "HelmetCrab": false
+    "HelmetCrab": false,
+    "KnightPhantom": false,
+    "CarminiteGhastguard": false,
+    "CarminiteGolem": false,
+    "TowerBroodling": false,
+    "CarminiteGhastling": false,
+    "UrGhast": false
   },
   "entitybasehealth": {
     "PropellerEntity": 180.8400268554688,
@@ -789,6 +801,9 @@
     "LowerGoblinKnight": 135.1999969482422,
     "UpperGoblinKnight": 202.79998779296875,
     "BlockChainGoblin": 135.1999969482422,
-    "KingSpider": 195.60000610351562
+    "KingSpider": 195.60000610351562,
+    "TowerBroodling": 42.279998779296875,
+    "PinchBeetle": 241.60000610351562,
+    "CarminiteGhastguard": 181.1999969482422
   }
 }
