--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -350,7 +350,10 @@
     "CarminiteGolem": true,
     "TowerBroodling": true,
     "CarminiteGhastling": true,
-    "UrGhast": true
+    "UrGhast": true,
+    "UnstableIceCore": true,
+    "SnowGuardian": true,
+    "StableIceCore": true
   },
   "entitiesalwaysinfernal": {
     "Vindicator": false,
@@ -609,7 +612,10 @@
     "CarminiteGolem": false,
     "TowerBroodling": false,
     "CarminiteGhastling": false,
-    "UrGhast": false
+    "UrGhast": false,
+    "UnstableIceCore": false,
+    "SnowGuardian": false,
+    "StableIceCore": false
   },
   "entitybasehealth": {
     "PropellerEntity": 180.8400268554688,
@@ -804,6 +810,10 @@
     "KingSpider": 195.60000610351562,
     "TowerBroodling": 42.279998779296875,
     "PinchBeetle": 241.60000610351562,
-    "CarminiteGhastguard": 181.1999969482422
+    "CarminiteGhastguard": 181.1999969482422,
+    "CarminiteGhastling": 35.52000045776367,
+    "SnowGuardian": 61.599998474121094,
+    "StableIceCore": 123.19999694824219,
+    "UnstableIceCore": 123.19999694824219
   }
 }
