--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -353,7 +353,9 @@
     "UrGhast": true,
     "UnstableIceCore": true,
     "SnowGuardian": true,
-    "StableIceCore": true
+    "StableIceCore": true,
+    "SnowQueen": true,
+    "IceCrystal": true
   },
   "entitiesalwaysinfernal": {
     "Vindicator": false,
@@ -615,7 +617,9 @@
     "UrGhast": false,
     "UnstableIceCore": false,
     "SnowGuardian": false,
-    "StableIceCore": false
+    "StableIceCore": false,
+    "SnowQueen": false,
+    "IceCrystal": false
   },
   "entitybasehealth": {
     "PropellerEntity": 180.8400268554688,
@@ -814,6 +818,7 @@
     "CarminiteGhastling": 35.52000045776367,
     "SnowGuardian": 61.599998474121094,
     "StableIceCore": 123.19999694824219,
-    "UnstableIceCore": 123.19999694824219
+    "UnstableIceCore": 123.19999694824219,
+    "ArmoredGiant": 454.3999938964844
   }
 }
