--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -819,6 +819,7 @@
     "SnowGuardian": 61.599998474121094,
     "StableIceCore": 123.19999694824219,
     "UnstableIceCore": 123.19999694824219,
-    "ArmoredGiant": 454.3999938964844
+    "ArmoredGiant": 454.3999938964844,
+    "ProwlerEntity": 856.0
   }
 }
