--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -355,7 +355,13 @@
     "SnowGuardian": true,
     "StableIceCore": true,
     "SnowQueen": true,
-    "IceCrystal": true
+    "IceCrystal": true,
+    "KelvinEntity": true,
+    "BludEntity": true,
+    "WalkingBedEntity": true,
+    "WistiverEntity": true,
+    "CurseEntity": true,
+    "ButcherEntity": true
   },
   "entitiesalwaysinfernal": {
     "Vindicator": false,
@@ -619,7 +625,13 @@
     "SnowGuardian": false,
     "StableIceCore": false,
     "SnowQueen": false,
-    "IceCrystal": false
+    "IceCrystal": false,
+    "KelvinEntity": false,
+    "BludEntity": false,
+    "WalkingBedEntity": false,
+    "WistiverEntity": false,
+    "CurseEntity": false,
+    "ButcherEntity": false
   },
   "entitybasehealth": {
     "PropellerEntity": 180.8400268554688,
